--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: #10141f;
+  background-color: #10141f !important;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -74,3 +74,49 @@ a {
     -webkit-transform: rotate(360deg);
   }
 }
+.react-multiple-carousel__arrow#{
+  z-index: 9 !important;
+}
+
+.navbar{
+  padding: 15px 0 !important;
+  position: absolute;
+  z-index: 11;
+  display: flex;
+};
+.NavSearch{
+  display: flex;
+  padding: 25px 0 !important;
+  z-index: 11;
+  position: relative;
+  margin-bottom: 8%;
+};
+.Active{
+  position: fixed;
+  z-index:1001;
+  width: 100%;
+  background: #10141f;
+  padding-top: 15px !important;
+  animation-name: scrollNav;
+  animation-duration: .4s;
+};
+.ActiveSearch{
+  width: 100%;
+  z-index: 1001;
+  position: fixed;
+  background: #10141f;
+  padding-top:5px !important;
+  animation-name: scrollNav;
+  animation-duration: .4s;
+  margin-top: -1%;
+};
+@keyframes scrollNav{
+  0% {
+    opacity: 0;
+    transform: translateY(-60px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  };
+};
